# webhook-dispacther

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: app.js  index.html  style.css
