[package]
name = "webhook-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-files = "0.6"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive, preserve"] }
serde_json = { version = "1.0" , features = ["preserve_order"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3.31"
